structural: replace entity loading with jOOQ ID-pair queries to eliminate N+1 lazy loads
WatchStatusService grouped episodes/seasons by navigating lazy @ManyToOne
proxies (ep.getSeason().getId()), triggering a SELECT per entity. Replace
with jOOQ custom repository methods that return Map<UUID, List<UUID>>
via fetchGroups, fetching only the two ID columns needed.